@@ -66,4 +66,5 @@ Javier Villavicencio <the_paya at gentoo.org>
 Daniel M. Weeks <dan at danweeks.net> (Binpkg multi instance support)
 wwjjbb (https://github.com/wwjjbb)
 Michael Yang <yangofzeal at gmail.com>
+kamikadoYukio <https://github.com/kamikadoYukio> (documentation)
 Jan Ziak <0xe2.0x9a.0x9b at gmail.com>
