@@ -1,3 +1,10 @@
+// vim:set noet cinoptions= sw=4 ts=4:
+// This file is part of the eix project and distributed under the
+// terms of the GNU General Public License v2.
+//
+// Copyright (c)
+//   Martin Väth <martin@mvath.de>
+
 syntax = "proto3";
 
 package eix_proto;
